
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
  
   165: sluys, 10/06/2009
     - added routine readCommandLineOptions() to parse command-line options
     - added command-line options to select an injection XML file and number
     - current options are described in the section "Command-line options" of the manual
          
   163: sluys, 10/06/2009
     - moved parIDs 74-76 (spin 2) to 81-83; input files changed, check doc/input_LAL-15/
     - added IDs 75-77, 85-87 for carthesian spin parameters (see manual)
     
   162: sluys, 09/06/2009
     - implementing reading of injection XML files
     - you need to include libmetaio/include and link against liblalmetaio to compile
       and link SPINspiral, see Makefile and Makefile_LSC in doc/Makefiles/
      
   160: sluys, 27/05/2009
     - added SPINspiral 'manual' (aimed at summer student using the code)
   
   159: sluys, 27/05/2009
     - fixed bug (I think) introduced at r.156 (see Viviens email of 25/05/2009)
     
   157: sluys, 21/05/2009
     - treat random injection parameters properly
     - todo: read parameter file before injection file
     
   156: sluys, 21/05/2009
     - moved code to start MCMC offset to new subroutine startMCMCOffset()
     - choice from input file respected: start at inj/best value, start from
       Gaussian around inj/best value, start uniformly from prior range
     - consistency check on input file: abort if injection value outside prior range
     
   152: sluys, 13/05/2009
     - moved files in doc/ around
   
   151: sluys, 13/05/2009
     - changed mcmc.input: added file name for system-dependent parameters
       (see doc/mcmc.input)
            
   149: sluys, 07/05/2009
     - added GNU licence stuff
   
   148: sluys, 30/04/2009
     - named the code SPINspiral
   
   147: sluys, 16/04/2009
     - fixed SNR scaling for log(d) as MCMC parameter
   
   145: sluys, 13/04/2009